--- a/Home.html
+++ b/Home.html
@@ -514,7 +514,10 @@ c0-6.7,3.1-17,17-17h12.5v13.9H73.5z"></path></svg></span>
                 <div class="u-container-layout u-container-layout-2">
                   <div class="u-expanded u-grey-10 u-map">
                     <div class="embed-responsive">
-                      <iframe class="embed-responsive-item" src="https://maps.google.com/maps?output=embed&amp;q=Manhattan&amp;t=m" data-map="JTdCJTIyYWRkcmVzcyUyMiUzQSUyMk1hbmhhdHRhbiUyMiUyQyUyMnpvb20lMjIlM0FudWxsJTJDJTIydHlwZUlkJTIyJTNBJTIycm9hZCUyMiUyQyUyMmxhbmclMjIlM0FudWxsJTJDJTIyYXBpS2V5JTIyJTNBbnVsbCUyQyUyMm1hcmtlcnMlMjIlM0ElNUIlNUQlN0Q="></iframe>
+                      <iframe class="embed-responsive-item"
+                      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3955.872987723255!2d110.55489087463609!3d-7.4792749737452855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a6f58823083c3%3A0x10445f90f70d0c86!2sBalai%20Desa%20Banyuanyar!5e0!3m2!1sen!2sid!4v1692454870337!5m2!1sen!2sid"
+                      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                      referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                   </div>
                 </div>
