--- a/Omah-Toga.html
+++ b/Omah-Toga.html
@@ -455,7 +455,7 @@
             <div class="u-container-layout u-similar-container u-container-layout-1">
               <img class="u-expanded-width u-image u-image-default u-image-1" src="images/IMG_4591.jpg" alt=""
                 data-image-width="3024" data-image-height="4032">
-              <h5 class="u-custom-font u-font-open-sans u-hover-feature u-text u-text-custom-color-5 u-text-2">Yogurt
+              <h5 class="u-custom-font u-font-open-sans u-hover-feature u-text u-text-custom-color-5 u-text-2">Stick Bunga Telang
               </h5>
             </div>
           </div>
@@ -465,8 +465,8 @@
             <div class="u-container-layout u-similar-container u-container-layout-2">
               <img class="u-expanded-width u-image u-image-default u-image-2" src="images/IMG_4588.jpg" alt=""
                 data-image-width="3024" data-image-height="4032">
-              <h5 class="u-custom-font u-font-open-sans u-hover-feature u-text u-text-custom-color-5 u-text-3">Stick
-                Susu</h5>
+              <h5 class="u-custom-font u-font-open-sans u-hover-feature u-text u-text-custom-color-5 u-text-3">Stick kelor
+	      </h5>
             </div>
           </div>
           <div
@@ -475,7 +475,7 @@
             <div class="u-container-layout u-similar-container u-container-layout-3">
               <img class="u-expanded-width u-image u-image-default u-image-3" src="images/IMG_4585.jpg" alt=""
                 data-image-width="3024" data-image-height="4032">
-              <h5 class="u-custom-font u-font-open-sans u-hover-feature u-text u-text-custom-color-5 u-text-4">Pie Susu
+              <h5 class="u-custom-font u-font-open-sans u-hover-feature u-text u-text-custom-color-5 u-text-4">Stick Bayam Merah
               </h5>
             </div>
           </div>
@@ -485,7 +485,7 @@
             <div class="u-container-layout u-similar-container u-container-layout-4">
               <img class="u-expanded-width u-image u-image-default u-image-4" src="images/IMG_4598.jpg" alt=""
                 data-image-width="3024" data-image-height="4032">
-              <h5 class="u-custom-font u-font-open-sans u-hover-feature u-text u-text-custom-color-5 u-text-5">Pie Susu
+              <h5 class="u-custom-font u-font-open-sans u-hover-feature u-text u-text-custom-color-5 u-text-5">Simplisia
               </h5>
             </div>
           </div>
