--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
             class="u-border-2 u-border-custom-color-7 u-container-style u-group u-radius-50 u-shape-round u-white u-group-2">
             <div class="u-container-layout u-valign-middle u-container-layout-2">
               <div class="u-clearfix u-expanded-width u-group-elements u-group-elements-2">
-                <p class="u-align-center u-custom-font u-font-lobster u-text u-text-1">Omah ​Tambeng</p>
+                <p class="u-align-center u-custom-font u-font-lobster u-text u-text-1">Omah ​Bukuku</p>
                 <a href="Omah-Bukuku.html"
                   class="u-border-2 u-border-custom-color-8 u-border-hover-custom-color-6 u-btn u-btn-round u-button-style u-hover-custom-color-7 u-none u-radius-50 u-text-black u-btn-1">selengkapnya</a>
               </div>
